--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -1,242 +1,250 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.ikanow.aleph2</groupId>
-  <artifactId>aleph2_data_model</artifactId>
-  <version>${aleph2.version}</version>
-  <properties>
-	<aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
-	<!-- Jackson needs to stay at 2.3.x for compatibility with Storm in HDP 2.3 -->
-	<jackson.version>2.3.1</jackson.version>
-  </properties>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <testSourceDirectory>test</testSourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-	<plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-javadoc-plugin</artifactId>
-		<version>2.10.3</version>
-		<configuration>
-		    <additionalparam>-Xdoclint:none</additionalparam>	
-			<reportOutputDirectory>apidocs</reportOutputDirectory>
-		</configuration>
-	</plugin>
-      <plugin>
-      	<groupId>org.eluder.coveralls</groupId>
-      	<artifactId>coveralls-maven-plugin</artifactId>
-      	<version>3.1.0</version>
-	    <configuration>
-	        <sourceEncoding>UTF-8</sourceEncoding>
-	    </configuration>
-      </plugin>
-	  <plugin>
-		<groupId>org.jacoco</groupId>
-		<artifactId>jacoco-maven-plugin</artifactId>
-		<version>0.7.2.201409121644</version>
-		<configuration>
-			<excludes>
-				<!--  At some point want to move this back in again and actually have test coverage for beans, but it's quite low priority atm -->
-				<exclude>**/com/ikanow/aleph2/data_model/objects/**/*</exclude>
-			</excludes>
-		</configuration>
-		<executions>
-			<execution>
-				<id>prepare-agent</id>
-				<goals>
-					<goal>prepare-agent</goal>
-				</goals>
-			</execution>
-		</executions>
-	  </plugin>
-	      <plugin>
-	      	<!--  execute using: mvn -e clean package shade:shade -Dmaven.test.skip=true -->
-	        <groupId>org.apache.maven.plugins</groupId>
-	        <artifactId>maven-shade-plugin</artifactId>
-	        <version>2.3</version>
-	        <executions>
-	          <execution>
-	            <phase>package</phase>
-	            <goals>
-	              <goal>shade</goal>
-	            </goals>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.ikanow.aleph2</groupId>
+	<artifactId>aleph2_data_model</artifactId>
+	<version>${aleph2.version}</version>
+	<properties>
+		<aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
+		<!-- Jackson needs to stay at 2.3.x for compatibility with Storm in HDP 
+			2.3 -->
+		<jackson.version>2.3.1</jackson.version>
+	</properties>
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
 				<configuration>
-		          <shadedArtifactAttached>true</shadedArtifactAttached>
-		        </configuration>
-	          </execution>
-	        </executions>
-	      </plugin>
-    
-	</plugins>
-    <pluginManagement>
-    	<plugins>
-    		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-    		<plugin>
-    			<groupId>org.eclipse.m2e</groupId>
-    			<artifactId>lifecycle-mapping</artifactId>
-    			<version>1.0.0</version>
-    			<configuration>
-    				<lifecycleMappingMetadata>
-    					<pluginExecutions>
-    						<pluginExecution>
-    							<pluginExecutionFilter>
-    								<groupId>org.jacoco</groupId>
-    								<artifactId>
-    									jacoco-maven-plugin
-    								</artifactId>
-    								<versionRange>
-    									[0.7.2.201409121644,)
-    								</versionRange>
-    								<goals>
-    									<goal>prepare-agent</goal>
-    								</goals>
-    							</pluginExecutionFilter>
-    							<action>
-    								<ignore></ignore>
-    							</action>
-    						</pluginExecution>
-    					</pluginExecutions>
-    				</lifecycleMappingMetadata>
-    			</configuration>
-    		</plugin>    		
-    	</plugins>
-    </pluginManagement>
-  </build>
-  <dependencies>
-	<dependency>
-	    <groupId>jdk.tools</groupId>
-	    <artifactId>jdk.tools</artifactId>
-	    <version>${java.version}</version>
-	    <scope>system</scope>
-	    <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
-	</dependency>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.12</version>
-  		<scope>test</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>cglib</groupId>
-  		<artifactId>cglib-nodep</artifactId>
-  		<version>3.1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.fasterxml.jackson.core</groupId>
-  		<artifactId>jackson-core</artifactId>
-  		<version>${jackson.version}</version>
- 	</dependency>
-    <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-  		<version>${jackson.version}</version>
-    </dependency>
-  	<dependency>
-  		<groupId>com.google.guava</groupId>
-  		<artifactId>guava</artifactId>
-  		<version>18.0</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.scala-lang</groupId>
-  		<artifactId>scala-library</artifactId>
-  		<version>2.11.7</version>
-  	</dependency>  	
-  	<dependency>
-		<groupId>com.google.inject</groupId>
-		<artifactId>guice</artifactId>
-		<version>3.0</version>
-	</dependency>
-	<dependency>
-		<groupId>com.typesafe</groupId>
-		<artifactId>config</artifactId>
-		<version>1.3.0</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.functionaljava</groupId>
-	    <artifactId>functionaljava</artifactId>
-	    <version>4.3</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.functionaljava</groupId>
-	    <artifactId>functionaljava-java8</artifactId>
-	    <version>4.3</version>
-	</dependency>	
-  	<dependency>
-  		<groupId>org.mongodb</groupId>
-  		<artifactId>mongo-java-driver</artifactId>
-  		<version>2.13.1</version>
-  		<scope>test</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.google.inject</groupId>
-  		<artifactId>guice</artifactId>
-  		<version>3.0</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.google.inject.extensions</groupId>
-  		<artifactId>guice-assistedinject</artifactId>
-  		<version>3.0</version>
-  	</dependency>
-  	<dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-api</artifactId>
-    <version>2.3</version>
-  </dependency>
-  <dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-core</artifactId>
-    <version>2.3</version>
-  </dependency>
-  	<dependency>
-  		<groupId>org.mongojack</groupId>
-  		<artifactId>mongojack</artifactId>
-  		<version>2.1.0</version>
-  		<scope>test</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.metamodel</groupId>
-  		<artifactId>MetaModel-core</artifactId>
-  		<version>4.3.3</version>
-  	</dependency>
-  	<dependency>
-		<groupId>log4j</groupId>
-		<artifactId>log4j</artifactId>
-		<version>1.2.17</version>
-	</dependency>
-	<dependency>
-		<groupId>commons-beanutils</groupId>
-		<artifactId>commons-beanutils</artifactId>
-		<version>1.9.2</version>
-	</dependency>	
-  	<dependency>
-  		<groupId>com.github.stephenc.eaio-uuid</groupId>
-  		<artifactId>uuid</artifactId>
-  		<version>3.4.0</version>
-  	</dependency>
-  	<!-- 
-  	<dependency>
-  		<groupId>com.ikanow.aleph2</groupId>
-  		<artifactId>aleph2_crud_service_mongodb</artifactId>
-  		<version>[0.0,)</version>
-  		<scope>test</scope>
-  	</dependency>
-  	 -->
-  	<dependency>
-  		<groupId>com.joestelmach</groupId>
-  		<artifactId>natty</artifactId>
-  		<version>0.11</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.codepoetics</groupId>
-  		<artifactId>protonpack</artifactId>
-  		<version>1.4</version>
-  	</dependency>
-  </dependencies>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.3</version>
+				<configuration>
+					<additionalparam>-Xdoclint:none</additionalparam>
+					<reportOutputDirectory>apidocs</reportOutputDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<sourceEncoding>UTF-8</sourceEncoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.2.201409121644</version>
+				<configuration>
+					<excludes>
+						<!-- At some point want to move this back in again and actually have 
+							test coverage for beans, but it's quite low priority atm -->
+						<exclude>**/com/ikanow/aleph2/data_model/objects/**/*</exclude>
+						<!-- These are mock objects just used in tests, no need to worry about 
+							their test coverage -->
+						<exclude>**/com/ikanow/aleph2/data_model/interfaces/shared_services/Mock*</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<!-- execute using: mvn -e clean package shade:shade -Dmaven.test.skip=true -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.jacoco</groupId>
+										<artifactId>
+											jacoco-maven-plugin
+										</artifactId>
+										<versionRange>
+											[0.7.2.201409121644,)
+										</versionRange>
+										<goals>
+											<goal>prepare-agent</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>jdk.tools</groupId>
+			<artifactId>jdk.tools</artifactId>
+			<version>${java.version}</version>
+			<scope>system</scope>
+			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib-nodep</artifactId>
+			<version>3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.11.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.typesafe</groupId>
+			<artifactId>config</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.functionaljava</groupId>
+			<artifactId>functionaljava</artifactId>
+			<version>4.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.functionaljava</groupId>
+			<artifactId>functionaljava-java8</artifactId>
+			<version>4.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-assistedinject</artifactId>
+			<version>3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mongojack</groupId>
+			<artifactId>mongojack</artifactId>
+			<version>2.1.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.metamodel</groupId>
+			<artifactId>MetaModel-core</artifactId>
+			<version>4.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.stephenc.eaio-uuid</groupId>
+			<artifactId>uuid</artifactId>
+			<version>3.4.0</version>
+		</dependency>
+		<!-- <dependency> <groupId>com.ikanow.aleph2</groupId> <artifactId>aleph2_crud_service_mongodb</artifactId> 
+			<version>[0.0,)</version> <scope>test</scope> </dependency> -->
+		<dependency>
+			<groupId>com.joestelmach</groupId>
+			<artifactId>natty</artifactId>
+			<version>0.11</version>
+		</dependency>
+		<dependency>
+			<groupId>com.codepoetics</groupId>
+			<artifactId>protonpack</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<!-- Tests -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.13.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
