--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
 before_install:
  - mvn install -f dependency_pom.xml -DskipTests=true && cd test_dependencies && git pull origin master && mvn install -DskipTests=true && cd ../
 
-script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test
+script: cd $TEST_DIR && mvn install -DskipTests=true
 
 after_success:
  - mvn clean test jacoco:report coveralls:report
