--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ env:
  - TEST_DIR=aleph2_core_security
 
 before_install:
- - mvn install -f dependency_pom.xml -DskipTests=true && cd test_dependencies && git pull origin master && mvn install -DskipTests=true && cd ../
+ - mvn install -f dependency_pom.xml -q -DskipTests=true && cd test_dependencies && git pull origin master && mvn install -q -DskipTests=true && cd ../
 
-script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test
+script: cd $TEST_DIR && mvn install -q -DskipTests=true && mvn test
 
 after_success:
  - mvn clean test jacoco:report coveralls:report
