ALEPH-3 First draft at tidying up logging (mainly sl4j vs log4j vs slf4j-log12) - still not functional I think

--- a/aleph2_core_distributed_services_library/pom.xml
+++ b/aleph2_core_distributed_services_library/pom.xml
@@ -188,5 +188,12 @@
 			<artifactId>akka-cluster-tools_2.11</artifactId>
 			<version>${aleph2.akka}</version>
 		</dependency>
+		<dependency>
+			<!-- This just ensures that log4j won't be in the shaded jar via some transitive install -->
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>[0,)</version>
+			<scope>provided</scope>			
+		</dependency>
 	</dependencies>
 </project>
