--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -10,6 +10,13 @@
 			2.3 -->
 		<jackson.version>2.3.1</jackson.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>version99</id>
+			<!-- highly available repository serving empty artifacts -->
+			<url>http://version99.qos.ch/</url>
+  		</repository>
+	</repositories>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<testSourceDirectory>test</testSourceDirectory>
@@ -203,8 +210,16 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<!-- To disable if I want to move to log4j-over-sl4j in the future, just changed to 99-empty -->
+			<version>1.2.17</version>			
 		</dependency>
+		<!-- Too many things seem to use sl4j-log12 to support using this
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>log4j-over-slf4j</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+		 -->		
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
