--- a/aleph2_core_distributed_services_library/pom.xml
+++ b/aleph2_core_distributed_services_library/pom.xml
@@ -8,7 +8,7 @@
 		<aleph2.scope>compile</aleph2.scope>
 		<aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
 		<aleph2.curator>2.6.0</aleph2.curator>
-		<aleph2.akka>2.4-M1</aleph2.akka>
+		<aleph2.akka>2.4.1</aleph2.akka>
 	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
