--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -261,5 +261,10 @@
 			<version>2.13.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+	<groupId>org.apache.commons</groupId>
+	<artifactId>commons-io</artifactId>
+	<version>1.3.2</version>
+</dependency>		
 	</dependencies>
 </project>
