--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -260,11 +260,12 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.13.1</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-	<groupId>org.apache.commons</groupId>
+		</dependency>			
+<dependency>
+	<groupId>commons-io</groupId>
 	<artifactId>commons-io</artifactId>
-	<version>1.3.2</version>
-</dependency>		
+	<version>2.4</version>
+</dependency>
+
 	</dependencies>
 </project>
