--- a/aleph2_core_shared_library/pom.xml
+++ b/aleph2_core_shared_library/pom.xml
@@ -1,140 +1,186 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.ikanow.aleph2</groupId>
-  <artifactId>aleph2_core_shared_library</artifactId>
-  <version>${aleph2.version}</version>
-  <properties>
-	<aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
-	<aleph2.scope>compile</aleph2.scope>
-	<aleph2.hadoop>2.6.0</aleph2.hadoop>
-  </properties>
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-      <plugin>
-      	<groupId>org.eluder.coveralls</groupId>
-      	<artifactId>coveralls-maven-plugin</artifactId>
-      	<version>3.1.0</version>
-	    <configuration>
-	        <sourceEncoding>UTF-8</sourceEncoding>
-	    </configuration>
-      </plugin>
-	  <plugin>
-		<groupId>org.jacoco</groupId>
-		<artifactId>jacoco-maven-plugin</artifactId>
-		<version>0.7.2.201409121644</version>
-		<configuration>
-			<excludes>
-				<!--  This actually removes code from coveralls.io -->
-				<!-- This is external code pasted into aleph2 -->
-				<exclude>**/com/ikanow/aleph2/**/utils/LiveInjector*</exclude>
-			</excludes>
-		</configuration>
-		<executions>
-			<execution>
-				<id>prepare-agent</id>
-				<goals>
-					<goal>prepare-agent</goal>
-				</goals>
-			</execution>
-		</executions>
-	  </plugin>
-	      <plugin>
-	      	<!--  execute using: mvn -e clean package shade:shade -Dmaven.test.skip=true -->
-	        <groupId>org.apache.maven.plugins</groupId>
-	        <artifactId>maven-shade-plugin</artifactId>
-	        <version>2.3</version>
-	        <executions>
-	          <execution>
-	            <phase>package</phase>
-	            <goals>
-	              <goal>shade</goal>
-	            </goals>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.ikanow.aleph2</groupId>
+	<artifactId>aleph2_core_shared_library</artifactId>
+	<version>${aleph2.version}</version>
+	<properties>
+		<aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
+		<aleph2.scope>compile</aleph2.scope>
+		<aleph2.hadoop>2.6.0</aleph2.hadoop>
+		<!-- Overridden in test_depdendencies profile that is activated if skip 
+			tests is true -->
+		<maven.test.skip>true</maven.test.skip>
+	</properties>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
 				<configuration>
-		          <shadedArtifactAttached>true</shadedArtifactAttached>
-		        </configuration>
-	          </execution>
-	        </executions>
-	      </plugin>
-    
-	</plugins>
-    <pluginManagement>
-    	<plugins>
-    		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-    		<plugin>
-    			<groupId>org.eclipse.m2e</groupId>
-    			<artifactId>lifecycle-mapping</artifactId>
-    			<version>1.0.0</version>
-    			<configuration>
-    				<lifecycleMappingMetadata>
-    					<pluginExecutions>
-    						<pluginExecution>
-    							<pluginExecutionFilter>
-    								<groupId>org.jacoco</groupId>
-    								<artifactId>
-    									jacoco-maven-plugin
-    								</artifactId>
-    								<versionRange>
-    									[0.7.2.201409121644,)
-    								</versionRange>
-    								<goals>
-    									<goal>prepare-agent</goal>
-    								</goals>
-    							</pluginExecutionFilter>
-    							<action>
-    								<ignore></ignore>
-    							</action>
-    						</pluginExecution>
-    					</pluginExecutions>
-    				</lifecycleMappingMetadata>
-    			</configuration>
-    		</plugin>    		
-    	</plugins>
-    </pluginManagement>
-  </build>
-  <dependencies>
-	<dependency>
-	    <groupId>jdk.tools</groupId>
-	    <artifactId>jdk.tools</artifactId>
-	    <version>${java.version}</version>
-	    <scope>system</scope>
-	    <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
-	</dependency>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.12</version>
-  		<scope>test</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.ikanow.aleph2</groupId>
-  		<artifactId>aleph2_data_model</artifactId>
-  		<version>${aleph2.version}</version>
-		<scope>${aleph2.scope}</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.xeustechnologies</groupId>
-		<artifactId>jcl-core</artifactId>
-		<version>2.4</version>
-	</dependency>
-  	<dependency>
-  		<groupId>org.apache.hadoop</groupId>
-  		<artifactId>hadoop-common</artifactId>
-  		<version>${aleph2.hadoop}</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.hadoop</groupId>
-  		<artifactId>hadoop-client</artifactId>
-  		<version>${aleph2.hadoop}</version>
-  		<scope>test</scope>
-  	</dependency>
-  </dependencies>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<sourceEncoding>UTF-8</sourceEncoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.2.201409121644</version>
+				<configuration>
+					<excludes>
+						<!-- This actually removes code from coveralls.io -->
+						<!-- This is external code pasted into aleph2 -->
+						<exclude>**/com/ikanow/aleph2/**/utils/LiveInjector*</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<!-- execute using: mvn -e clean package shade:shade -Dmaven.test.skip=true -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.jacoco</groupId>
+										<artifactId>
+											jacoco-maven-plugin
+										</artifactId>
+										<versionRange>
+											[0.7.2.201409121644,)
+										</versionRange>
+										<goals>
+											<goal>prepare-agent</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>jdk.tools</groupId>
+			<artifactId>jdk.tools</artifactId>
+			<version>${java.version}</version>
+			<scope>system</scope>
+			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.ikanow.aleph2</groupId>
+			<artifactId>aleph2_data_model</artifactId>
+			<version>${aleph2.version}</version>
+			<scope>${aleph2.scope}</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.xeustechnologies</groupId>
+			<artifactId>jcl-core</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-common</artifactId>
+			<version>${aleph2.hadoop}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-client</artifactId>
+			<version>${aleph2.hadoop}</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	<!-- Test dependencies -->
+	<profiles>
+		<profile>
+			<id>test_dependencies</id>
+			<activation>
+				<property>
+					<name>skipTests</name>
+					<value>!true</value>
+				</property>
+			</activation>
+			<properties>
+				<maven.test.skip>false</maven.test.skip>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.ikanow.aleph2</groupId>
+					<artifactId>aleph2_management_db_service</artifactId>
+					<version>${aleph2.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>com.ikanow.aleph2</groupId>
+					<artifactId>aleph2_storage_service_hdfs</artifactId>
+					<version>${aleph2.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>com.ikanow.aleph2</groupId>
+					<artifactId>aleph2_management_db_service_mongodb</artifactId>
+					<version>${aleph2.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>com.ikanow.aleph2</groupId>
+					<artifactId>aleph2_search_index_service_elasticsearch</artifactId>
+					<version>${aleph2.version}</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
