--- a/aleph2_core_shared_library/src/test/resources/context_local_test.properties
+++ b/aleph2_core_shared_library/src/test/resources/context_local_test.properties
@@ -14,8 +14,8 @@
 # limitations under the License.
 ###############################################################################
 # SERVICES
-#service.CoreDistributedServices.interface=com.ikanow.aleph2.distributed_services.services.ICoreDistributedServices
-#service.CoreDistributedServices.service=com.ikanow.aleph2.distributed_services.services.MockCoreDistributedServices
+service.CoreDistributedServices.interface=com.ikanow.aleph2.distributed_services.services.ICoreDistributedServices
+service.CoreDistributedServices.service=com.ikanow.aleph2.distributed_services.services.NoCoreDistributedServices
 service.StorageService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IStorageService
 service.StorageService.service=com.ikanow.aleph2.core.shared.test_services.MockStorageService
 service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
