--- a/aleph2_core_shared_library/pom.xml
+++ b/aleph2_core_shared_library/pom.xml
@@ -186,6 +186,12 @@
 					<version>${aleph2.version}</version>
 					<scope>test</scope>
 				</dependency>
+				<dependency>
+					<groupId>com.ikanow.aleph2</groupId>
+					<artifactId>aleph2_core_security</artifactId>
+					<version>${aleph2.version}</version>
+					<scope>test</scope>
+				</dependency>
 			</dependencies>
 		</profile>
 	</profiles>
