--- a/aleph2_core_shared_library/src/test/resources/context_local_test.properties
+++ b/aleph2_core_shared_library/src/test/resources/context_local_test.properties
@@ -27,6 +27,6 @@ service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearc
 service.DocumentService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IDocumentService
 service.DocumentService.service=com.ikanow.aleph2.search_service.elasticsearch.services.MockElasticsearchIndexService
 service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
-service.SecurityService.service=com.ikanow.aleph2.data_model.interfaces.shared_services.MockSecurityService
+service.SecurityService.service=com.ikanow.aleph2.security.service.NoSecurityService
 
 MongoDbManagementDbService.v1_enabled=false
