--- a/aleph2_analytics_context_library/example_config_files/context_local_test.properties
+++ b/aleph2_analytics_context_library/example_config_files/context_local_test.properties
@@ -27,6 +27,8 @@ service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearc
 #service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.ElasticsearchIndexService
 service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
 service.SecurityService.service=com.ikanow.aleph2.data_model.interfaces.shared_services.MockSecurityService
+service.DocumentService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IDocumentService
+service.DocumentService.service=com.ikanow.aleph2.search_service.elasticsearch.services.MockElasticsearchIndexService
 #?CUSTOM:
 service.test.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.test.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
