--- a/aleph2_analytics_context_library/src/test/resources/context_local_test.properties
+++ b/aleph2_analytics_context_library/src/test/resources/context_local_test.properties
@@ -17,7 +17,7 @@
 service.CoreDistributedServices.interface=com.ikanow.aleph2.distributed_services.services.ICoreDistributedServices
 service.CoreDistributedServices.service=com.ikanow.aleph2.distributed_services.services.NoCoreDistributedServices
 service.StorageService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IStorageService
-service.StorageService.service=com.ikanow.aleph2.core.shared.test_services.MockStorageService
+service.StorageService.service=com.ikanow.aleph2.storage_service_hdfs.services.MockHdfsStorageService
 service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
 service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
