ALEPH-19 Workaround for https://github.com/kamranzafar/JCL/issues/37 - can't apply https://github.com/kamranzafar/JCL/issues/32 because fails to load Lucene via SPI

--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -167,7 +167,7 @@
   		<artifactId>hadoop-common</artifactId>
   		<version>${aleph2.hadoop}</version>
   		<scope>provided</scope>
-  	</dependency>
+  	</dependency>  	
   </dependencies>
   <profiles>
 	<profile>
@@ -191,6 +191,12 @@
 		   	<dependency>
 		  		<groupId>com.ikanow.aleph2</groupId>
 		  		<artifactId>aleph2_management_db_service_mongodb</artifactId>
+		  		<version>${aleph2.version}</version>
+				<scope>test</scope>
+		  	</dependency>  	
+		   	<dependency>
+		  		<groupId>com.ikanow.aleph2</groupId>
+		  		<artifactId>aleph2_crud_service_elasticsearch</artifactId>
 		  		<version>${aleph2.version}</version>
 				<scope>test</scope>
 		  	</dependency>  	
