--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ env:
  - TEST_DIR=aleph2_core_security
 
 before_install:
- - mvn install -f dependency_pom.xml -DskipTests=true && cd test_dependencies && git pull origin master && mvn install -DskipTests=true && cd ../
+ - mvn -B install -f dependency_pom.xml -DskipTests=true && cd test_dependencies && git pull origin master && mvn -B install -DskipTests=true && cd ../
 
-script: cd $TEST_DIR && mvn install -DskipTests=true && mvn clean test jacoco:report coveralls:report
+script: cd $TEST_DIR && mvn -B install -DskipTests=true && mvn -B clean test jacoco:report coveralls:report
 
 #after_success:
 # - mvn clean test jacoco:report coveralls:report
