ALEPH-63 Adding support for custom registered (analytic) technologies for things that are already on the classpath

--- a/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/analytics/actors/test_data_bucket_change.properties
+++ b/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/analytics/actors/test_data_bucket_change.properties
@@ -36,3 +36,5 @@ service.BatchEnrichmentService.service=com.ikanow.aleph2.analytics.hadoop.servic
 globals.local_root_dir=TEST_IS_OVERRIDDEN
 # MANAGEMENT DB:
 MockMongoDbCrudServiceFactory.one_per_thread=false
+# DIM - registered classpath
+DataImportManager.registered_technologies.test_registered_classpath=com.ikanow.aleph2.analytics.hadoop.services.MockHadoopTechnologyService
