ALEPH-66 #comment updated crud service to clear out logging paths when a bucket is deleted

--- a/aleph2_management_db_service/pom.xml
+++ b/aleph2_management_db_service/pom.xml
@@ -138,6 +138,12 @@
   		<version>${aleph2.version}</version>
 		<scope>${aleph2.scope}</scope>  		
   	</dependency>
+<!-- 	<dependency> -->
+<!-- 		<groupId>com.ikanow.aleph2</groupId> -->
+<!-- 		<artifactId>aleph2_logging_service</artifactId> -->
+<!-- 		<version>${aleph2.version}</version> -->
+<!-- 		<scope>${aleph2.scope}</scope>   -->
+<!-- 	</dependency> -->
 	<dependency>
 		<groupId>com.google.inject</groupId>
 		<artifactId>guice</artifactId>
