ALEPH-66 #comment added logging service to AnalyticsContext, HarvestContext and 2x DIM harvest/analtyic actors

--- a/aleph2_analytics_context_library/example_config_files/context_local_test.properties
+++ b/aleph2_analytics_context_library/example_config_files/context_local_test.properties
@@ -32,6 +32,8 @@ service.DocumentService.service=com.ikanow.aleph2.search_service.elasticsearch.s
 #?CUSTOM:
 service.test.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.test.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
+service.CoreLoggingService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ILoggingService
+service.CoreLoggingService.service=com.ikanow.aleph2.logging.service.LoggingService
 
 # CONFIG
 # GLOBALS:
