--- a/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/analytics/actors/test_data_bucket_change.properties
+++ b/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/analytics/actors/test_data_bucket_change.properties
@@ -30,6 +30,8 @@ service.StreamingEnrichmentService.interface=com.ikanow.aleph2.data_model.interf
 service.StreamingEnrichmentService.service=com.ikanow.aleph2.analytics.storm.services.MockStormAnalyticTechnologyService
 service.BatchEnrichmentService.interface=com.ikanow.aleph2.data_model.interfaces.data_analytics.IAnalyticsTechnologyService
 service.BatchEnrichmentService.service=com.ikanow.aleph2.analytics.hadoop.services.MockHadoopTechnologyService
+service.CoreLoggingService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ILoggingService
+service.CoreLoggingService.service=com.ikanow.aleph2.logging.service.LoggingService
 # CONFIG
 # GLOBALS:
 #(insert these by hand)
