--- a/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/harvest/actors/test_data_bucket_change.properties
+++ b/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/harvest/actors/test_data_bucket_change.properties
@@ -24,6 +24,8 @@ service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interface
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
 service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
 service.SecurityService.service=com.ikanow.aleph2.data_model.interfaces.shared_services.MockSecurityService
+service.CoreLoggingService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ILoggingService
+service.CoreLoggingService.service=com.ikanow.aleph2.logging.service.LoggingService
 # CONFIG
 # GLOBALS:
 #(insert these by hand)
