--- a/aleph2_analytics_context_library/pom.xml
+++ b/aleph2_analytics_context_library/pom.xml
@@ -141,6 +141,12 @@
 		<version>${aleph2.version}</version>
 		<scope>${aleph2.scope}</scope>
 	</dependency>
+	<dependency>
+		<groupId>com.ikanow.aleph2</groupId>
+		<artifactId>aleph2_logging_service</artifactId>
+		<version>${aleph2.version}</version>
+		<scope>test</scope>
+	</dependency>
 	<!-- Other external dependencies here -->
 	<dependency>
 		<groupId>commons-io</groupId>
