--- a/aleph2_harvest_context_library/example_config_files/harvest_local_test.properties
+++ b/aleph2_harvest_context_library/example_config_files/harvest_local_test.properties
@@ -27,6 +27,8 @@ service.test.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IMa
 service.test.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
 service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
 service.SecurityService.service=com.ikanow.aleph2.data_model.interfaces.shared_services.MockSecurityService
+service.CoreLoggingService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ILoggingService
+service.CoreLoggingService.service=com.ikanow.aleph2.logging.service.LoggingService
 
 # CONFIG
 # GLOBALS:
