ALEPH-66 #comment moved search/storage services to test deps on logging now that we use multiwriter

--- a/aleph2_logging_service/pom.xml
+++ b/aleph2_logging_service/pom.xml
@@ -31,13 +31,13 @@
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_search_index_service_elasticsearch</artifactId>
   		<version>${aleph2.version}</version>
-		<scope>${aleph2.scope}</scope>  		  		
+		<scope>test</scope>  		  		
   	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_storage_service_hdfs</artifactId>
   		<version>${aleph2.version}</version>
-		<scope>${aleph2.scope}</scope>  		  		
+		<scope>test</scope>  		  		
   	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
