--- a/aleph2_logging_service/pom.xml
+++ b/aleph2_logging_service/pom.xml
@@ -39,12 +39,12 @@
 <!--   		<version>${aleph2.version}</version> -->
 <!-- 		<scope>test</scope>  		  		 -->
 <!--   	</dependency> -->
-  	<dependency>
-  		<groupId>com.ikanow.aleph2</groupId>
-  		<artifactId>aleph2_management_db_service</artifactId>
-  		<version>${aleph2.version}</version>
-		<scope>${aleph2.scope}</scope>  		  		
-  	</dependency>
+<!--   	<dependency> -->
+<!--   		<groupId>com.ikanow.aleph2</groupId> -->
+<!--   		<artifactId>aleph2_management_db_service</artifactId> -->
+<!--   		<version>${aleph2.version}</version> -->
+<!-- 		<scope>${aleph2.scope}</scope>  		  		 -->
+<!--   	</dependency> -->
   </dependencies>
   	<!-- Test dependencies -->
   <profiles>
