--- a/aleph2_logging_service/pom.xml
+++ b/aleph2_logging_service/pom.xml
@@ -27,6 +27,12 @@
   		<version>${aleph2.version}</version>
 		<scope>${aleph2.scope}</scope>
 	</dependency>
+	<dependency>
+  		<groupId>com.ikanow.aleph2</groupId>
+  		<artifactId>aleph2_core_shared_library</artifactId>
+  		<version>${aleph2.version}</version>
+		<scope>${aleph2.scope}</scope>
+	</dependency>
 <!--   <dependency> -->
 <!--   		<groupId>com.ikanow.aleph2</groupId> -->
 <!--   		<artifactId>aleph2_search_index_service_elasticsearch</artifactId> -->
