ALEPH-66 #comment added test resources to pom

--- a/aleph2_logging_service/pom.xml
+++ b/aleph2_logging_service/pom.xml
@@ -9,6 +9,15 @@
   </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
+   <testSourceDirectory>test</testSourceDirectory>    
+    <testResources>
+      <testResource>
+        <directory>resources</directory>
+        <excludes>
+          <exclude>**/*.java</exclude>
+        </excludes>
+      </testResource>
+    </testResources>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
