ALEPH-20 Some preparatory improvements to deduplication service

--- a/aleph2_analytics_context_library/pom.xml
+++ b/aleph2_analytics_context_library/pom.xml
@@ -197,6 +197,12 @@
 				<artifactId>aleph2_core_security</artifactId>
 				<version>${aleph2.version}</version>
 				<scope>test</scope>
+			</dependency>			
+			<dependency>
+				<groupId>com.ikanow.aleph2</groupId>
+				<artifactId>aleph2_logging_service</artifactId>
+				<version>${aleph2.version}</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</profile>	
