ALEPH-66 #comment added config option to logger to send messages to log4j, removed old log4j messages from actors then

--- a/aleph2_logging_service/resources/context_local_test.properties
+++ b/aleph2_logging_service/resources/context_local_test.properties
@@ -43,3 +43,4 @@ service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearc
 CoreLoggingService.default_time_field=@timestamp
 CoreLoggingService.default_user_log_level=ERROR
 CoreLoggingService.default_system_log_level=DEBUG
+CoreLoggingService.output_to_log4j=true
