ALEPH-60 Renamed logging service to fit in required service name schema (need to document that somewherE)

--- a/aleph2_logging_service/resources/context_local_test.properties
+++ b/aleph2_logging_service/resources/context_local_test.properties
@@ -40,7 +40,7 @@ service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearc
 #CoreDistributedServices.application_name="test"
 
 #LOGGING SERVICE CONFIG
-CoreLoggingService.default_time_field=@timestamp
-CoreLoggingService.default_user_log_level=ERROR
-CoreLoggingService.default_system_log_level=DEBUG
-CoreLoggingService.system_mirror_to_log4j_level=ALL
+LoggingService.default_time_field=@timestamp
+LoggingService.default_user_log_level=ERROR
+LoggingService.default_system_log_level=DEBUG
+LoggingService.system_mirror_to_log4j_level=ALL
