--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>aleph2_data_model</artifactId>
 	<version>${aleph2.version}</version>
 	<properties>
-		<aleph2.version>2.8.0-SNAPSHOT</aleph2.version>
+		<aleph2.version>2.9.0</aleph2.version>
 		<!-- Jackson needs to stay at 2.3.x for compatibility with Storm in HDP 
 			2.3 -->
 		<jackson.version>2.3.1</jackson.version>
