--- a/aleph2_logging_service/pom.xml
+++ b/aleph2_logging_service/pom.xml
@@ -4,7 +4,7 @@
   <version>${aleph2.version}</version>
   <artifactId>aleph2_logging_service</artifactId>
   <properties>
-	<aleph2.version>2.8.0-SNAPSHOT</aleph2.version>
+	<aleph2.version>2.9.0</aleph2.version>
 	<aleph2.scope>compile</aleph2.scope>
 	<!-- Overridden in test_depdendencies profile that is activated if skip 
         tests is true -->
