ALEPH-12 Tidying up batch enrichment delegate

--- a/aleph2_analytics_context_library/src/test/resources/context_local_test.properties
+++ b/aleph2_analytics_context_library/src/test/resources/context_local_test.properties
@@ -28,5 +28,16 @@ service.DocumentService.interface=com.ikanow.aleph2.data_model.interfaces.data_s
 service.DocumentService.service=com.ikanow.aleph2.search_service.elasticsearch.services.MockElasticsearchIndexService
 service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
 service.SecurityService.service=com.ikanow.aleph2.security.service.NoSecurityService
+#?CUSTOM:
+service.test.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
+service.test.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
+service.LoggingService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ILoggingService
+service.LoggingService.service=com.ikanow.aleph2.logging.service.LoggingService
 
+# CONFIG
+# For testing - should be removed
 MongoDbManagementDbService.v1_enabled=false
+# Full Search index service if enabled
+#ElasticsearchCrudService.elasticsearch_connection=localhost:4093
+# For testing
+CoreDistributedServices.application_name="test"
