Modified Netty Deps

--- a/aleph2_logging_service/pom.xml
+++ b/aleph2_logging_service/pom.xml
@@ -167,4 +167,13 @@
 		</dependencies>
 	</profile>	
   </profiles>
+  <dependencyManagement>
+	  	<dependencies>
+	  		<dependency>
+	  			<groupId>io.netty</groupId>
+	  			<artifactId>netty</artifactId>
+	  			<version>3.10.5.Final</version>
+	  		</dependency>
+	  	</dependencies>
+	  </dependencyManagement>
 </project>
