--- a/aleph2_analytics_context_library/pom.xml
+++ b/aleph2_analytics_context_library/pom.xml
@@ -206,5 +206,14 @@
 			</dependency>
 		</dependencies>
 	</profile>	
-  </profiles>	
+  </profiles>
+  <dependencyManagement>
+	  	<dependencies>
+	  		<dependency>
+	  			<groupId>io.netty</groupId>
+	  			<artifactId>netty</artifactId>
+	  			<version>3.10.5.Final</version>
+	  		</dependency>
+	  	</dependencies>
+	  </dependencyManagement>
 </project>
