ALEPH-63 Fixed test (logging wasn't configured)

--- a/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/analytics/actors/test_data_bucket_change.properties
+++ b/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/analytics/actors/test_data_bucket_change.properties
@@ -32,7 +32,7 @@ service.StreamingEnrichmentService.service=com.ikanow.aleph2.analytics.storm.ser
 service.BatchEnrichmentService.interface=com.ikanow.aleph2.data_model.interfaces.data_analytics.IAnalyticsTechnologyService
 service.BatchEnrichmentService.service=com.ikanow.aleph2.analytics.hadoop.services.MockHadoopTechnologyService
 service.LoggingService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ILoggingService
-service.LoggingService.service=com.ikanow.aleph2.logging.service.LoggingService
+service.LoggingService.service=com.ikanow.aleph2.logging.service.Log4JLoggingService
 # CONFIG
 # GLOBALS:
 #(insert these by hand)
